--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-langchain
-langchain-openai
-langchain-community
-pypdf
-chromadb
-openai
+streamlit==1.34.1
+langchain==0.1.20
+langchain-openai==0.1.6
+langchain-community==0.0.38
+langchain-text-splitters==0.0.1
+pypdf==4.2.0
+chromadb==0.5.0
+openai==1.25.2
